2006-01-15  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/Makefile.am: Modified makefile to pass some XSL parameters
	to the xsltproc.  For example, where to find icon images, what filename to
	use as a CSS stylesheet, etc.
	* docs/tutorial/insert_example_code.pl: Modified script to mark up the
	filename with a docbook 'filename' element so that it can be styled more
	easily
	* docs/tutorial/style.css: add a new CSS stylesheet for styling the
	tutorial.  The CSS is based on the GNOME stylesheets used for yelp but a
	also designed to fit the theme of the gtkmm website.
	* docs/tutorial/icons/*.png: add a bunch of images from the tango theme to
	be used for informational and navigational icons.

2006-01-10  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treeview.hg: Comment-out uses of g_assert() to avoid 
        warning that the statement has no effect

2005-12-31  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: Add screenshot for the aspectframe example.
	The screenshot was already in CVS, just not linked from the tutorial.

2005-12-31  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: updated section on prepackaged gtkmm
	binaries for linux distributions

2006-01-07  Michael J M Thomson  <mjmt@internode.on.net>

	* gtk/gtkmm.h: Include menutoolbutton.h and tearoffmenuitem.h.

2006-01-04  Cedric Gustin <cedric.gustin@gmail.com>

	* gtk/src/Makefile_list_of_hg.am_fragment: Moved plug.hg and
	socket.hg from files_posix_hg to files_general_hg as both GtkPlug
	and GtkSocket are now supported on win32.

2005-12-20  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/container.ccg:
	* gtk/src/container.hg: Use custom_c_callback option 
	with _WRAP_SIGNAL for the remove signal, so we can 
	provide a custom signal callback (as well as the existing 
	custom default signal callback). This allows us to 
	check for already-deleted children in connected signal handler 