@@ -219,7 +219,7 @@ priority (highest-priority tags are last).
 <function name="gtk_text_view_get_tabs">
 <description>
 Gets the default tabs for @text_view. Tags in the buffer may
-override the defaults. The returned array will be %NULL if
+override the defaults. The returned array will be empty if
 &quot;standard&quot; (8-space) tabs are used.
 </description>
 <parameters>
@@ -229,7 +229,7 @@ override the defaults. The returned array will be %NULL if
 </parameter_description>
 </parameter>
 </parameters>
-<return> copy of default tab array, or %NULL if &quot;standard&quot; tabs are used.
+<return> copy of default tab array, or an empty array if &quot;standard&quot; tabs are used.
 </return>
 </function>
 
@@ -2051,6 +2051,85 @@ Same as gtk_text_iter_forward_search(), but moves backward.
     </parameter>
   </parameters>
   <return></return>
+</function>
+
+function name="gtk_image_get_icon_name">
+<description>
+Gets the icon name and size being displayed by the #GtkImage.
+The storage type of the image must be %GTK_IMAGE_EMPTY or
+%GTK_IMAGE_ICON_NAME (see gtk_image_get_storage_type()).
+
+Since: 2.6
+
+</description>
+<parameters>
+<parameter name="image">
+<parameter_description> a #GtkImage
+</parameter_description>
+</parameter>
+<parameter name="icon_name">
+<parameter_description> place to store an icon name
+</parameter_description>
+</parameter>
+<parameter name="size">
+<parameter_description> place to store an icon size
+</parameter_description>
+</parameter>
+</parameters>
+<return></return>
+</function>
+
+<function name="gtk_progress_bar_get_text">
+<description>
+Retrieves the text displayed superimposed on the progress bar,
+if any.
+
+
+</description>
+<parameters>
+<parameter name="pbar">
+<parameter_description> a #GtkProgressBar
+</parameter_description>
+</parameter>
+</parameters>
+<return> text.
+</return>
+</function>
+
+<function name="gtk_color_button_get_title">
+<description>
+Gets the title of the color selection dialog.
+
+Since: 2.4
+</description>
+<parameters>
+<parameter name="color_button">
+<parameter_description> a #GtkColorButton
+</parameter_description>
+</parameter>
+</parameters>
+<return>The title
+</return>
+</function>
+
+<function name="gtk_file_chooser_list_shortcut_folders">
+<description>
+Queries the list of shortcut folders in the file chooser, as set by
+gtk_file_chooser_add_shortcut_folder().
+
+Since: 2.4
+</description>
+<parameters>
+<parameter name="chooser">
+<parameter_description> a #GtkFileChooser
+</parameter_description>
+</parameter>
+</parameters>
+<return> A list of folder filenames, if there are any shortcut
+folders..
+
+
+</return>
 </function>
 
 </root>
