@@ -1,3 +1,8 @@
+2006-01-18  Murray Cumming <murrayc@murrayc.com>
+
+	* gtk/src/gtk_docs_override.xml: Added some overrides for GTK+ documentation 
+	that mentions free() or NULL.
+
 2006-01-15  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
 
 	* docs/tutorial/Makefile.am: Modified makefile to pass some XSL parameters
